[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Titillium-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Bad Signal.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Control.gd" type="Script" id=3]
[ext_resource path="res://scripts/Button_Fullscreen.gd" type="Script" id=4]
[ext_resource path="res://scripts/Button_Back.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.199219, 0.199219, 0.199219, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.0535583, 0.064363, 0.152344, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
anti_aliasing_size = 1.0

[sub_resource type="DynamicFont" id=4]
size = 32
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_char = 7
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 82
extra_spacing_char = 17
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 21
extra_spacing_char = 4
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options_Menu" type="Panel" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.901961 )
margin_right = 330.0
margin_bottom = 720.0
custom_styles/panel = SubResource( 3 )

[node name="Title_Label" type="Label" parent="Options_Menu"]
margin_left = 20.0
margin_top = 10.0
margin_right = 227.0
margin_bottom = 53.0
rect_scale = Vector2( 1.4, 1.4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 4 )
text = "Options"
align = 1
valign = 1

[node name="Label_Mouse_Sensitivity" type="Label" parent="Options_Menu"]
margin_top = 120.0
margin_right = 330.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 4 )
text = "Mouse sensitivity"
align = 1
valign = 1

[node name="HSlider_Mouse_Sensitivity" type="HSlider" parent="Options_Menu"]
margin_left = 10.0
margin_top = 160.0
margin_right = 320.0
margin_bottom = 176.0
min_value = 0.1
max_value = 0.8
step = 0.004
value = 0.3

[node name="Button_Fullscreen" type="Button" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -135.0
margin_top = -400.0
margin_right = 135.0
margin_bottom = -350.0
custom_fonts/font = SubResource( 4 )
text = "Fullscreen"
script = ExtResource( 4 )

[node name="Button_Back" type="Button" parent="Options_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -155.0
margin_top = -70.0
margin_right = 155.0
margin_bottom = -20.0
custom_fonts/font = SubResource( 4 )
text = "Back"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Menu" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Start_Menu"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Start_Menu"]
modulate = Color( 0.658824, 0.231373, 0.733333, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = 495.5
margin_right = 784.5
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_butt" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 551.0
margin_top = 648.0
margin_right = 729.0
margin_bottom = 677.0
custom_fonts/font = SubResource( 2 )
text = "quit game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_butt" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 551.0
margin_top = 576.0
margin_right = 729.0
margin_bottom = 605.0
custom_fonts/font = SubResource( 2 )
text = "settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resume_butt" type="Button" parent="Start_Menu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 551.0
margin_top = 509.0
margin_right = 729.0
margin_bottom = 538.0
custom_fonts/font = SubResource( 2 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="Options_Menu/HSlider_Mouse_Sensitivity" to="." method="_on_HSlider_Mouse_Sensitivity_value_changed"]
[connection signal="pressed" from="Start_Menu/quit_butt" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Start_Menu/options_butt" to="." method="_on_options_butt_pressed"]
[connection signal="pressed" from="Start_Menu/resume_butt" to="." method="_on_resume_butt_pressed"]
